@@ -70,3 +70,7 @@ See <<aggregating-request-reply>> for more information.
 
 The `HeaderEnricher` transformer has been provided, using SpEL to generate the header values.
 See <<streams-header-enricher>> for more information.
+
+The `MessagingTransformer` has been provided.
+This allows a Kafka streams topoology to interact with a spring-messaging component, such as a Spring Integration flow.
+See <<streams-messaging>> and <<streams-integration>> for more information.
